// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-src-paths build should create valid app 1`] = `
SOURCE HTML: 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4002/runtime-0ea2528cf0b6ed101089.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4002/vendors~main-618579b08dc20130efab.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4002/main-55ef0393adc164f6ae61.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script crossorigin="anonymous">
      window.__LOADABLE_REQUIRED_CHUNKS__ = [];
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4002/runtime-0ea2528cf0b6ed101089.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4002/vendors~main-618579b08dc20130efab.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4002/main-55ef0393adc164f6ae61.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>

POST HYDRATE DIFFS: NO DIFF
WARNINGS: Array []
ERRORS: Array []
`;

exports[`custom-src-paths build should generate the expected files 1`] = `
Object {
  "index.html": 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4002/runtime-0ea2528cf0b6ed101089.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4002/vendors~main-618579b08dc20130efab.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4002/main-55ef0393adc164f6ae61.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script crossorigin="anonymous">
      window.__LOADABLE_REQUIRED_CHUNKS__ = [];
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4002/runtime-0ea2528cf0b6ed101089.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4002/vendors~main-618579b08dc20130efab.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4002/main-55ef0393adc164f6ae61.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
,
  "main-55ef0393adc164f6ae61.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-0ea2528cf0b6ed101089.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-618579b08dc20130efab.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths start should start a development server 1`] = `
SOURCE HTML: 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script>
      window.__LOADABLE_REQUIRED_CHUNKS__ = [];
    </script>
    <script async
            data-chunk="main"
            src="/runtime.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main.js"
    >
    </script>
  </body>
</html>

POST HYDRATE DIFFS: NO DIFF
WARNINGS: Array []
ERRORS: Array []
`;
